[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/GFX/Interface/PNG/glassPanel.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/Interface/PNG/metalPanel.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/GFX/Interface/PNG/metalPanel_blueCorner.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/Interface/PNG/metalPanel_redCorner.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/Interface/PNG/dotRed.png" type="Texture" id=7]
[ext_resource path="res://Assets/GFX/Interface/PNG/metalPanel_greenCorner.png" type="Texture" id=8]
[ext_resource path="res://Assets/Interface/button_hover_style.tres" type="StyleBox" id=9]
[ext_resource path="res://Assets/Interface/button_normal_style.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/Interface/button_pressed_style.tres" type="StyleBox" id=11]
[ext_resource path="res://Assets/Interface/Numberpad.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.0901961, 0.643137, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0, 0.615686, 0.0862745, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = ExtResource( 9 )
Button/styles/normal = ExtResource( 10 )
Button/styles/pressed = ExtResource( 11 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Numberpad" type="Popup"]
anchor_right = 0.292969
anchor_bottom = 0.666667
margin_bottom = -3.05176e-05
rect_min_size = Vector2( 300, 400 )
theme = SubResource( 3 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 270.0
margin_bottom = 100.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/DisplayContainer"]
margin_left = 10.0
margin_right = 260.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Display" type="Label" parent="VBoxContainer/DisplayContainer"]
margin_left = 95.0
margin_top = 36.0
margin_right = 175.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"

[node name="ButtonContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 270.0
margin_bottom = 358.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 59.0
margin_right = 211.0
margin_bottom = 208.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 3

[node name="Button_1" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Button_2" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 56.0
margin_right = 96.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"

[node name="Button_3" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 112.0
margin_right = 152.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"

[node name="Button_4" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 96.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"

[node name="Button_5" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 56.0
margin_top = 56.0
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"

[node name="Button_6" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 112.0
margin_top = 56.0
margin_right = 152.0
margin_bottom = 96.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "6"

[node name="Button_7" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 112.0
margin_right = 40.0
margin_bottom = 152.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "7"

[node name="Button_8" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 56.0
margin_top = 112.0
margin_right = 96.0
margin_bottom = 152.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8"

[node name="Button_9" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 112.0
margin_top = 112.0
margin_right = 152.0
margin_bottom = 152.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"

[node name="StatusLight" type="TextureRect" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 168.0
margin_right = 40.0
margin_bottom = 208.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_10" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 56.0
margin_top = 168.0
margin_right = 96.0
margin_bottom = 208.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Button_OK" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 112.0
margin_top = 168.0
margin_right = 152.0
margin_bottom = 208.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ok"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
